# keepty

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  PROTOCOL.md
keepty/: Cargo.toml
keepty-protocol/: Cargo.toml
keepty-protocol/src/: lib.rs
keepty-screen/: Cargo.toml
keepty-screen/src/: lib.rs
keepty/src/: attach.rs  broker.rs  main.rs
keepty/tests/: integration.rs
sdks/dotnet/Keepty/: Client.cs  Keepty.csproj  Protocol.cs
sdks/go/: go.mod  keepty.go  keepty_test.go
sdks/python/: pyproject.toml
sdks/python/keepty/: __init__.py  client.py  protocol.py  screen.py
sdks/python/tests/: test_integration.py
sdks/typescript/: package-lock.json  package.json  tsconfig.json
sdks/typescript/src/: client.ts  index.ts  protocol.ts
sdks/typescript/tests/: test_integration.mjs
