[workspace]
resolver = "2"
members = [
    "keepty-protocol",
    "keepty",
    "keepty-screen",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["BorjaGM1"]
description = "Persistent PTY sessions with a typed binary protocol"
repository = "https://github.com/BorjaGM1/keepty"

[workspace.dependencies]
keepty-protocol = { version = "0.1.1", path = "keepty-protocol" }
portable-pty = "0.8"
vt100 = "0.15"
nix = "0.29"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
libc = "0.2"
